# RustyNotes

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  package.json
docs/: ARCHITECTURE.md  PLAN_RUST_RENDERING.md  TASKS.md
src/: app.html  app.rs  config.rs  editor.rs  graph.rs  lib.rs  main.rs  theme.rs  vault.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fs_watcher.rs  lib.rs  main.rs  notebook.rs  notes.rs  render.rs  search.rs  state.rs  tags.rs
src/lib/: App.svelte  commands.ts  events.ts  types.ts
src/lib/components/: WelcomeScreen.svelte
src/lib/components/editor/: Editor.svelte  EditorPane.svelte  LazyReadingView.svelte  ModeSwitcher.svelte  ReadingView.svelte  TabBar.svelte
src/lib/components/sidebar/: FileTree.svelte  NotebookSelector.svelte  SearchPanel.svelte  Sidebar.svelte  TagBrowser.svelte
src/lib/editor-engine/: image-embed.ts  lazy-reading-view.ts  live-preview.ts  math-live.ts  reading-view.ts  setup.ts  wikilinks.ts
src/lib/editor-engine/themes/: dark.ts  light.ts
src/lib/plugins/: loader.ts  types.ts
src/lib/stores/: notebook.svelte.ts  notes.svelte.ts  search.svelte.ts  settings.svelte.ts  tabs.svelte.ts  ui.svelte.ts
src/models/: note.rs
src/routes/: +page.svelte
src/storage/: file.rs  folder.rs
src/ui/: editor.rs  mod.rs  preview.rs  sidebar.rs  window.rs
