[package]
name = "rustynotes"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.11"
glib = "0.22"
sourceview5 = "0.11"
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7.0"
regex = "1.0"
