[package]
name = "rustynotes"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "image", "svg"] }
frostmark = "0.3"
iced_aw = { version = "0.13", features = ["menu", "context_menu", "selection_list", "sidebar", "spinner"] }
walkdir = "2"
notify = { version = "8", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
regex = "1"
rfd = "0.15"
